syntax = "proto3";

option go_package = "./rnode";

message GenesisSyncReq { }

message GenesisSyncRes {
  bytes Genesis = 1;
}

message BlockSyncReq {
  uint64 Number = 1;
}

message BlockSyncRes {
  bytes Block = 1;
}

message PeerDiscoverReq {
  string Peer = 1;
}

message PeerDiscoverRes {
  repeated string Peers = 1;
}

service Node {
  rpc GenesisSync(GenesisSyncReq) returns (GenesisSyncRes);
  rpc BlockSync(BlockSyncReq) returns (stream BlockSyncRes);
  rpc PeerDiscover(PeerDiscoverReq) returns (PeerDiscoverRes);
}
